[gd_scene load_steps=8 format=2]

[ext_resource path="res://Towers/TowerTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://Towers/Purple_Tower.gd" type="Script" id=2]
[ext_resource path="res://Towers/Projectiles/BasicTweenProjectile.tscn" type="PackedScene" id=3]
[ext_resource path="res://Towers/Assets/towerSquare_sampleE_E.png" type="Texture" id=4]
[ext_resource path="res://Towers/FrenzyModeTarget.gd" type="Script" id=5]
[ext_resource path="res://Towers/Projectiles/Assets/towerDefense_tile297.png" type="Texture" id=6]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, -288, 576, 0, 0, 288, -576, 0 )

[node name="Purple_Tower" index="0" groups=[
"frenzy",
] instance=ExtResource( 1 )]
script = ExtResource( 2 )
attack_range = 3
projectile = ExtResource( 3 )

[node name="Tower" parent="Node2D" index="0"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" parent="AttackRange" index="0"]
visible = false
shape = SubResource( 1 )

[node name="FrenzyPivot" type="Node2D" parent="." index="3"]

[node name="FrenzyModeTarget" type="Position2D" parent="FrenzyPivot" index="0"]
position = Vector2( 0, -1000 )
script = ExtResource( 5 )

[node name="TextureButton" type="TextureButton" parent="." index="4"]
margin_left = -33.0575
margin_top = 7.57567
margin_right = 30.9425
margin_bottom = 71.5757
texture_normal = ExtResource( 6 )
[connection signal="button_down" from="TextureButton" to="." method="_on_TextureButton_button_down"]
